Mon Aug  2 09:29:31 2004  Steve Huston  <shuston@riverace.com>

	* templates/automake.mpd: For non-installed libraries, generate
	  noinst_LTLIBRARIES instead of lib_LTLIBRARIES.
	  For libraries, assume that "libs" are libtool-created libraries
	  and "lit_libs" are not.

Mon Aug  2 08:04:27 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/bmake.mpd:
        * templates/bmakecommon.mpt:

          Removed ACE specific portions of the bmake template.  They will
          need to be supplied on the command line using the -value_template
          and -value_project options.

Sun Aug  1 08:31:49 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * templates/automake.mpd:
          Fix typo, use <%dynamicflag%> instead of <%dynamicflags%> within
          foreach loop.

Sun Aug  1 15:13:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/bmake.mpd:
          Use the new ccflags, common_flags and warnflags. Tried to add
          some support for unicode builds, this is not complete yet, added
          "" around the objfiles, to handle ++ in directory/file names. Added
          setting of define ACE_LD_DECORATOR_STR, which is used in ACE to
          determine the filename extension of DLL's. Removed the removal
          of files with postlinkrmext extenion (is .tds) files after the
          link, instead do this with realclean.

        * templates/bmakecommon.mpt:
          Updated dllflags, common_defines, added ccflags,
          common_flags, and warnflags which have to be passed
          to the compiler

        * templates/bmakedll.mpt:
        * templates/bmakedllexe.mpt:
        * templates/bmakelibexe.mpt:
          Set postlinkrmext to .tds in all these files, we should
          rework this a little bit more, tds files are needed for
          the debugger and we shouldn't remove them after the link.

          The bmake target is not complete yet, things that have to be